--- a/cube/model/cubes/control.yml
+++ b/cube/model/cubes/control.yml
@@ -1,11 +1,11 @@
 cubes:
   - name: control
-    sql_table: "public.\"Control\""
+    sql_table: 'public."Control"'
     data_source: default
 
     joins:
       - name: uncertainty
-        sql: "{CUBE}.\"uncertaintyId\" = {uncertainty}.id"
+        sql: '{CUBE}."uncertaintyId" = {uncertainty}.id'
         relationship: many_to_one
 
     dimensions:
@@ -26,12 +26,12 @@ cubes:
         sql: description
         type: string
 
-      - name: createdat
-        sql: "{CUBE}.\"createdAt\""
+      - name: createdAt
+        sql: '{CUBE}."createdAt"'
         type: time
 
-      - name: updatedat
-        sql: "{CUBE}.\"updatedAt\""
+      - name: updatedAt
+        sql: '{CUBE}."updatedAt"'
         type: time
 
     measures:
@@ -41,4 +41,3 @@ cubes:
     pre_aggregations:
       # Pre-aggregation definitions go here.
       # Learn more in the documentation: https://cube.dev/docs/caching/pre-aggregations/getting-started
-
