--- a/cube/model/cubes/group.yml
+++ b/cube/model/cubes/group.yml
@@ -1,6 +1,6 @@
 cubes:
   - name: group
-    sql_table: "public.\"Group\""
+    sql_table: 'public."Group"'
     data_source: default
 
     joins: []
@@ -19,12 +19,12 @@ cubes:
         sql: description
         type: string
 
-      - name: createdat
-        sql: "{CUBE}.\"createdAt\""
+      - name: createdAt
+        sql: '{CUBE}."createdAt"'
         type: time
 
-      - name: updatedat
-        sql: "{CUBE}.\"updatedAt\""
+      - name: updatedAt
+        sql: '{CUBE}."updatedAt"'
         type: time
 
     measures:
@@ -34,4 +34,3 @@ cubes:
     pre_aggregations:
       # Pre-aggregation definitions go here.
       # Learn more in the documentation: https://cube.dev/docs/caching/pre-aggregations/getting-started
-
