--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,13 +13,13 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/express": "^5.0.0",
     "prisma": "^5.20.0",
     "tsx": "^4.19.1",
     "typescript": "^5.6.2"
   },
   "dependencies": {
     "@prisma/client": "^5.20.0",
-    "express": "^4.21.0"
+    "@trpc/server": "^11.0.0-rc.553",
+    "zod": "^3.23.8"
   }
 }
