--- a/packages/client/tsconfig.app.json
+++ b/packages/client/tsconfig.app.json
@@ -18,7 +18,14 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    /* Pathing */
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "prisma": ["../../node_modules/@prisma/client"]
+    }
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
