--- a/packages/client/tsconfig.app.json
+++ b/packages/client/tsconfig.app.json
@@ -24,7 +24,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
-      "prisma": ["../../node_modules/@prisma/client"]
+      "@prisma/client": ["../../node_modules/@prisma/client"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
