--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "-": "^0.0.1",
     "@trpc/client": "^11.0.0-rc.553",
+    "lodash": "^4.17.21",
     "pinia": "^2.2.3",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.7",
     "vue": "^3.4.37",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "yjs": "^13.6.19"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.10",
     "@vitejs/plugin-vue": "^5.1.2",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
     "autoprefixer": "^10.4.20",
