--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,8 +13,10 @@
     "@dagrejs/dagre": "^1.1.4",
     "@trpc/client": "^11.0.0-rc.553",
     "@vue-flow/background": "^1.3.0",
+    "@vue-flow/controls": "^1.1.2",
     "@vue-flow/core": "^1.41.2",
     "@vue-flow/minimap": "^1.5.0",
+    "@vue-flow/node-toolbar": "^1.1.0",
     "lodash": "^4.17.21",
     "pinia": "^2.2.3",
     "primeicons": "^7.0.0",
