--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -23,6 +23,7 @@
     "primevue": "^4.2.1",
     "vue": "^3.4.37",
     "vue-router": "^4.4.5",
+    "y-websocket": "^2.0.4",
     "yjs": "^13.6.19"
   },
   "devDependencies": {
