--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/ws": "^8.5.13",
     "prisma": "^5.20.0",
     "tsx": "^4.19.1",
     "typescript": "^5.6.2"
@@ -21,6 +23,11 @@
     "@prisma/client": "^5.20.0",
     "@sinclair/typebox": "^0.33.14",
     "@trpc/server": "^11.0.0-rc.553",
+    "express": "^4.21.1",
+    "lib0": "^0.2.98",
+    "ws": "^8.18.0",
+    "y-protocols": "^1.0.6",
+    "yjs": "^13.6.20",
     "zod": "^3.23.8"
   }
 }
