--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.21",
     "pinia": "^2.2.3",
     "primevue": "^4.2.1",
+    "remixicon": "^4.5.0",
     "vue": "^3.4.37",
     "vue-router": "^4.4.5",
     "y-websocket": "^2.0.4",
